--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
@@ -6,6 +6,8 @@
     "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Menu:Blog": "Blog",
     "Menu:Tags": "Tags",
+    "Menu:Abouts": "About",
+    "Menu:About": "About",
     "Menu:Actions": "Actions",
     "SearchText": "Search text",
     "Close": "Close",
@@ -19,11 +21,13 @@
     "LastModificationTime": "Last Modification Time",
     "AreYouSure": "Are you sure?",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
-    "Permission:Dotnet9": "Dotnet9",
+    "Permission:Blog": "Blog",
     "Permission:Tags": "Tag Management",
     "Permission:Tags.Create": "Create",
     "Permission:Tags.Edit": "Edit",
     "Permission:Tags.Delete": "Delete",
-    "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?"
+    "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?",
+    "Permission:Abouts": "About",
+    "Permission:Abouts.Edit": "Edit"
   }
 }
