Separate UI and C# code;

--- a/doc/blog_contents/uploads/2021/02/2020-02-16_01.md
+++ b/doc/blog_contents/uploads/2021/02/2020-02-16_01.md
@@ -10,7 +10,7 @@ WPF国际化实现方式很多:
 
 使用ResX Manager管理多资源文件
 
-![使用ResX Manager管理多资源文件](https://img1.dotnet9.com/2021/02/0301.jpeg)
+![使用ResX Manager管理多资源文件](https://img1.dotnet9.com/2021/02/0301.png)
 
 **方便的地方在于：**
 
