--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
@@ -22,23 +22,54 @@
     "LastModificationTime": "Last Modification Time",
     "AreYouSure": "Are you sure?",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
+    "Dotnet9:Tag:0001": "There is already an tag with the same name: {0}",
     "Permission:Blog": "Blog",
-    "Permission:Tags": "Tag Management",
-    "Permission:Tags.Create": "Create",
-    "Permission:Tags.Edit": "Edit",
-    "Permission:Tags.Delete": "Delete",
-    "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?",
     "Permission:Abouts": "About",
     "Permission:Abouts.Edit": "Edit",
-    "Dotnet9:Tag:0001": "There is already an tag with the same name: {0}",
-    "Dotnet9:Album:0001": "There is already an album with the same name: {0}",
     "Permission:Albums": "Album Management",
     "Permission:Albums.Create": "Create",
     "Permission:Albums.Edit": "Edit",
     "Permission:Albums.Delete": "Delete",
+    "Permission:BlogPosts": "Blog Post Management",
+    "Permission:BlogPosts.Create": "Create",
+    "Permission:BlogPosts.Edit": "Edit",
+    "Permission:BlogPosts.Delete": "Delete",
+    "Permission:Categories": "Category Management",
+    "Permission:Categories.Create": "Create",
+    "Permission:Categories.Edit": "Edit",
+    "Permission:Categories.Delete": "Delete",
+    "Permission:Comments": "Comment Management",
+    "Permission:Comments.Create": "Create",
+    "Permission:Comments.Edit": "Edit",
+    "Permission:Comments.Delete": "Delete",
+    "Permission:Contacts": "Contact Management",
+    "Permission:Contacts.Create": "Create",
+    "Permission:Contacts.Edit": "Edit",
+    "Permission:Contacts.Delete": "Delete",
+    "Permission:Privacies": "Privacy",
+    "Permission:Privacies.Edit": "Edit",
+    "Permission:Ratings": "Rating Management",
+    "Permission:Ratings.Create": "Create",
+    "Permission:Ratings.Edit": "Edit",
+    "Permission:Ratings.Delete": "Delete",
+    "Permission:Tags": "Tag Management",
+    "Permission:Tags.Create": "Create",
+    "Permission:Tags.Edit": "Edit",
+    "Permission:Tags.Delete": "Delete",
+    "Permission:UrlLinks": "Url Link Management",
+    "Permission:UrlLinks.Create": "Create",
+    "Permission:UrlLinks.Edit": "Edit",
+    "Permission:UrlLinks.Delete": "Delete",
+    "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?",
+    "Dotnet9:Album:0001": "There is already an album with the same name: {0}",
     "AlbumDeletionConfirmationMessage": "Are you sure to delete the album '{0}'?",
     "Albums": "Albums",
     "NewAlbum": "New Album",
-    "CoverImageUrl": "Cover image"
+    "CoverImageUrl": "Cover image",
+    "Dotnet9:BlogPost:0001": "There is already an blog post with the same title: {0}",
+    "Dotnet9:BlogPost:0002": "There is already an blog post with the same slug: {0}",
+    "Dotnet9:Category:0001": "There is already an category with the same name: {0}",
+    "Dotnet9:UrlLink:0001": "There is already an url link with the same name: {0}",
+    "Dotnet9:UrlLink:0002": "There is already an url link with the same url: {0}"
   }
 }
