add category ui;

--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
@@ -2,11 +2,10 @@
   "culture": "en",
   "texts": {
     "Menu:Home": "Home",
-    "Welcome": "Welcome",
-    "LongWelcomeMessage": "Welcome to the application. This is a startup project based on the ABP framework. For more information, visit abp.io.",
     "Menu:Blog": "Blog",
     "Menu:Tags": "Tags",
     "Menu:Albums": "Albums",
+    "Menu:Categories": "Categories",
     "Menu:Abouts": "About",
     "Menu:About": "About",
     "Menu:Actions": "Actions",
@@ -14,15 +13,26 @@
     "Close": "Close",
     "Delete": "Delete",
     "Edit": "Edit",
+    "Albums": "Albums",
+    "NewAlbum": "New Album",
+    "Categories": "Categories",
+    "NewCategory": "New Category",
     "Tags": "Tags",
     "NewTag": "New Tag",
+    "CoverImageUrl": "Cover image",
     "Name": "Name",
     "Description": "Description",
     "CreationTime": "Creation Time",
     "LastModificationTime": "Last Modification Time",
     "AreYouSure": "Are you sure?",
     "AreYouSureToDelete": "Are you sure you want to delete this item?",
+    "Dotnet9:Album:0001": "There is already an album with the same name: {0}",
+    "Dotnet9:BlogPost:0001": "There is already an blog post with the same title: {0}",
+    "Dotnet9:BlogPost:0002": "There is already an blog post with the same slug: {0}",
+    "Dotnet9:Category:0001": "There is already an category with the same name: {0}",
     "Dotnet9:Tag:0001": "There is already an tag with the same name: {0}",
+    "Dotnet9:UrlLink:0001": "There is already an url link with the same name: {0}",
+    "Dotnet9:UrlLink:0002": "There is already an url link with the same url: {0}",
     "Permission:Blog": "Blog",
     "Permission:Abouts": "About",
     "Permission:Abouts.Edit": "Edit",
@@ -60,16 +70,8 @@
     "Permission:UrlLinks.Create": "Create",
     "Permission:UrlLinks.Edit": "Edit",
     "Permission:UrlLinks.Delete": "Delete",
-    "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?",
-    "Dotnet9:Album:0001": "There is already an album with the same name: {0}",
     "AlbumDeletionConfirmationMessage": "Are you sure to delete the album '{0}'?",
-    "Albums": "Albums",
-    "NewAlbum": "New Album",
-    "CoverImageUrl": "Cover image",
-    "Dotnet9:BlogPost:0001": "There is already an blog post with the same title: {0}",
-    "Dotnet9:BlogPost:0002": "There is already an blog post with the same slug: {0}",
-    "Dotnet9:Category:0001": "There is already an category with the same name: {0}",
-    "Dotnet9:UrlLink:0001": "There is already an url link with the same name: {0}",
-    "Dotnet9:UrlLink:0002": "There is already an url link with the same url: {0}"
+    "CategoryDeletionConfirmationMessage": "Are you sure to delete the category '{0}'?",
+    "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?"
   }
 }
