--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
@@ -2,11 +2,10 @@
   "culture": "zh-Hans",
   "texts": {
     "Menu:Home": "首页",
-    "Welcome": "欢迎",
-    "LongWelcomeMessage": "欢迎来到该应用程序. 这是一个基于ABP框架的启动项目. 有关更多信息, 请访问 abp.io.",
     "Menu:Blog": "Blog",
     "Menu:Tags": "标签",
     "Menu:Albums": "专辑",
+    "Menu:Categories": "文章分类",
     "Menu:Abouts": "关于",
     "Menu:About": "关于",
     "Menu:Actions": "操作",
@@ -14,16 +13,26 @@
     "Close": "关闭",
     "Delete": "删除",
     "Edit": "编辑",
+    "Albums": "专辑",
+    "NewAlbum": "新增专辑",
+    "Categories": "文章分类",
+    "NewCategory": "新增分类",
     "Tags": "标签",
     "NewTag": "新增标签",
+    "CoverImageUrl": "封面图片URL",
     "Name": "名称",
     "Description": "描述",
     "CreationTime": "添加时间",
     "LastModificationTime": "最后修改时间",
     "AreYouSure": "您确定吗?",
     "AreYouSureToDelete": "您确定需要删除选择的项吗？?",
-    "Permission:Blog": "Blog",
+    "Dotnet9:Album:0001": "已经存在同名专辑: {0}",
+    "Dotnet9:BlogPost:0001": "已经存在相同标题文章: {0}",
+    "Dotnet9:BlogPost:0002": "已经存在相同别名文章: {0}",
+    "Dotnet9:Category:0001": "已经存在相同文章分类: {0}",
     "Dotnet9:Tag:0001": "已经存在同名标签: {0}",
+    "Dotnet9:UrlLink:0001": "已经存在同名链接: {0}",
+    "Dotnet9:UrlLink:0002": "已经存在相同Url的链接: {0}",
     "Permission:Blog": "Blog",
     "Permission:Abouts": "关于",
     "Permission:Abouts.Edit": "编辑",
@@ -61,16 +70,8 @@
     "Permission:UrlLinks.Create": "新增",
     "Permission:UrlLinks.Edit": "编辑",
     "Permission:UrlLinks.Delete": "删除",
-    "TagDeletionConfirmationMessage": "确定删除选择的标签 '{0}'?",
-    "Dotnet9:Album:0001": "已经存在同名专辑: {0}",
     "AlbumDeletionConfirmationMessage": "确定删除选择的专辑 '{0}'?",
-    "Albums": "专辑",
-    "NewAlbum": "新增专辑",
-    "CoverImageUrl": "封面",
-    "Dotnet9:BlogPost:0001": "已经存在相同标题文章: {0}",
-    "Dotnet9:BlogPost:0002": "已经存在相同别名文章: {0}",
-    "Dotnet9:Category:0001": "已经存在相同文章分类: {0}",
-    "Dotnet9:UrlLink:0001": "已经存在同名链接: {0}",
-    "Dotnet9:UrlLink:0002": "已经存在相同Url的链接: {0}"
+    "CategoryDeletionConfirmationMessage": "确定删除选择的专辑 '{0}'?",
+    "TagDeletionConfirmationMessage": "确定删除选择的标签 '{0}'?"
   }
 }
