add privacy manager;

--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
@@ -8,6 +8,8 @@
     "Menu:Categories": "Categories",
     "Menu:Abouts": "About",
     "Menu:About": "About",
+    "Menu:Privacies": "Privacy",
+    "Menu:Privacy": "Privacy",
     "Menu:Actions": "Actions",
     "SearchText": "Search text",
     "Close": "Close",
