--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
@@ -8,6 +8,8 @@
     "Menu:Categories": "文章分类",
     "Menu:Abouts": "关于",
     "Menu:About": "关于",
+    "Menu:Privacies": "隐私",
+    "Menu:Privacy": "隐私",
     "Menu:Actions": "操作",
     "SearchText": "查询关键字",
     "Close": "关闭",
