add blog post manager;

--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
@@ -3,6 +3,7 @@
   "texts": {
     "Menu:Home": "Home",
     "Menu:Blog": "Blog",
+    "Menu:BlogPosts": "Blog Posts",
     "Menu:Tags": "Tags",
     "Menu:Albums": "Albums",
     "Menu:Categories": "Categories",
@@ -11,10 +12,23 @@
     "Menu:Privacies": "Privacy",
     "Menu:Privacy": "Privacy",
     "Menu:Actions": "Actions",
+    "Enum:CopyrightType:0": "Default",
+    "Enum:CopyrightType:1": "Contribution",
+    "Enum:CopyrightType:2": "Reprint",
     "SearchText": "Search text",
     "Close": "Close",
     "Delete": "Delete",
     "Edit": "Edit",
+    "BlogPosts": "Blog Posts",
+    "NewBlogPost": "New Blog Post",
+    "Title": "Title",
+    "Slug": "Slug",
+    "ShortDescription": "Short Description",
+    "Content": "Content",
+    "CopyrightType": "Blog Copyright Type",
+    "Original": "Original",
+    "OriginalTitle": "Original Title",
+    "OriginalLink": "Original Link",
     "Albums": "Albums",
     "NewAlbum": "New Album",
     "Categories": "Categories",
@@ -72,6 +86,7 @@
     "Permission:UrlLinks.Create": "Create",
     "Permission:UrlLinks.Edit": "Edit",
     "Permission:UrlLinks.Delete": "Delete",
+    "BlogPostDeletionConfirmationMessage": "Are you sure to delete the blog post '{0}'?",
     "AlbumDeletionConfirmationMessage": "Are you sure to delete the album '{0}'?",
     "CategoryDeletionConfirmationMessage": "Are you sure to delete the category '{0}'?",
     "TagDeletionConfirmationMessage": "Are you sure to delete the tag '{0}'?"
