--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
@@ -3,18 +3,32 @@
   "texts": {
     "Menu:Home": "首页",
     "Menu:Blog": "Blog",
+    "Menu:BlogPosts": "文章",
     "Menu:Tags": "标签",
     "Menu:Albums": "专辑",
-    "Menu:Categories": "文章分类",
+    "Menu:Categories": "分类",
     "Menu:Abouts": "关于",
     "Menu:About": "关于",
     "Menu:Privacies": "隐私",
     "Menu:Privacy": "隐私",
     "Menu:Actions": "操作",
+    "Enum:CopyrightType:0": "默认",
+    "Enum:CopyrightType:1": "投稿",
+    "Enum:CopyrightType:2": "转载",
     "SearchText": "查询关键字",
     "Close": "关闭",
     "Delete": "删除",
     "Edit": "编辑",
+    "BlogPosts": "文章",
+    "NewBlogPost": "新增文章",
+    "Title": "标题",
+    "Slug": "别名",
+    "ShortDescription": "简述",
+    "Content": "内容",
+    "CopyrightType": "版权类型",
+    "Original": "来源",
+    "OriginalTitle": "原文标题",
+    "OriginalLink": "原文链接",
     "Albums": "专辑",
     "NewAlbum": "新增专辑",
     "Categories": "文章分类",
@@ -72,6 +86,7 @@
     "Permission:UrlLinks.Create": "新增",
     "Permission:UrlLinks.Edit": "编辑",
     "Permission:UrlLinks.Delete": "删除",
+    "BlogPostDeletionConfirmationMessage": "确定删除选择的文章 '{0}'?",
     "AlbumDeletionConfirmationMessage": "确定删除选择的专辑 '{0}'?",
     "CategoryDeletionConfirmationMessage": "确定删除选择的专辑 '{0}'?",
     "TagDeletionConfirmationMessage": "确定删除选择的标签 '{0}'?"
