Add the association between blogpost and album, category, and tag;

--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/en.json
@@ -37,6 +37,9 @@
     "NewTag": "New Tag",
     "CoverImageUrl": "Cover image",
     "Name": "Name",
+    "AlbumNames": "Album",
+    "CategoryNames": "Category",
+    "TagNames": "Tag",
     "Description": "Description",
     "CreationTime": "Creation Time",
     "LastModificationTime": "Last Modification Time",
