--- a/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
+++ b/src/src/Dotnet9.Domain.Shared/Localization/Dotnet9/zh-Hans.json
@@ -37,6 +37,9 @@
     "NewTag": "新增标签",
     "CoverImageUrl": "封面图片URL",
     "Name": "名称",
+    "AlbumNames": "专辑",
+    "CategoryNames": "分类",
+    "TagNames": "标签",
     "Description": "描述",
     "CreationTime": "添加时间",
     "LastModificationTime": "最后修改时间",
