--- a/doc/blog_contents/uploads/2020/11/2020-11-29_01.md
+++ b/doc/blog_contents/uploads/2020/11/2020-11-29_01.md
@@ -246,3 +246,7 @@ Tab + Alt隐藏当前窗体
 欢迎大家向站长投稿文章，或推荐WPF项目或者控件库哦。
 
 - 文中网友仓库地址`SoftWareHelper`：[https://github.com/yanjinhuagood/SoftWareHelper](https://github.com/yanjinhuagood/SoftWareHelper)
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2020/11/2020-11-29_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/746)
