--- a/doc/blog_contents/uploads/2020/12/2020-12-04_01.md
+++ b/doc/blog_contents/uploads/2020/12/2020-12-04_01.md
@@ -151,3 +151,7 @@ Gitee仓库截图
  2. 跨平台的系统管理监控
 
 >- 仓库地址：[SiMay远程控制管理系统](https://gitee.com/dotnetchina/SiMayRemoteMonitorOS)
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2020/11/2020-12-04_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/765)
