--- a/doc/blog_contents/uploads/2020/12/2020-12-12_01.md
+++ b/doc/blog_contents/uploads/2020/12/2020-12-12_01.md
@@ -67,3 +67,7 @@ Github上的MahApps.Metro仓库截图
 后面有WPF相关的项目，或者站长自己的开源项目，站长决定加入这款控件尝试下，这么多人用，肯定不错的。
 
 >- 仓库地址：[MahApps.Metro](https://github.com/MahApps/MahApps.Metro)
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2020/11/2020-12-12_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/773)
