--- a/doc/blog_contents/uploads/2021/01/2021-01-07_01.md
+++ b/doc/blog_contents/uploads/2021/01/2021-01-07_01.md
@@ -106,3 +106,7 @@ protected override void InitializeShell(Window shell)
 ## 文末探讨
 
 其实该解决方案还是有问题的，在调用`InitializeShell(Window shell)`之前，站长调试发现模块视图已经执行了初始化，按道理说应该是登录成功后模块才执行初始化的，更多思考留给你，有什么建议欢迎`Dotnet9`网站留言。
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2021/01/2021-01-07_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/785)
