--- a/doc/blog_contents/uploads/2021/01/2021-01-09_01.md
+++ b/doc/blog_contents/uploads/2021/01/2021-01-09_01.md
@@ -157,3 +157,7 @@ public static string UrlEncode(string str)
     return (sb.ToString());
 }
 ```
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2021/01/2021-01-09_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/790)
