--- a/doc/blog_contents/uploads/2021/02/2021-02-16_01.md
+++ b/doc/blog_contents/uploads/2021/02/2021-02-16_01.md
@@ -80,3 +80,7 @@ WPF国际化实现方式很多:
 如上图，完善翻译后，再选择导入即可。
 
 该扩展程序是不是很方便？欢迎留言交流。
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2021/02/2021-02-16_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/800)
