--- a/doc/blog_contents/uploads/2021/02/2021-02-17_01.md
+++ b/doc/blog_contents/uploads/2021/02/2021-02-17_01.md
@@ -53,3 +53,7 @@ I18nManager.Instance.CurrentUICulture = culture;
 - [Accelerider.Windows](https://github.com/Accelerider/Accelerider.Windows)
 - [TerminalMACS.ManagerForWPF](https://github.com/dotnet9/TerminalMACS.ManagerForWPF)
 - [乐趣课堂（即本号正在做的一个开源项目）](https://github.com/dotnet9/lqclass.com)
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2021/02/2021-02-17_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/805)
