--- a/doc/blog_contents/uploads/2021/02/2021-02-18_01.md
+++ b/doc/blog_contents/uploads/2021/02/2021-02-18_01.md
@@ -103,3 +103,7 @@ RBAC2中的一个基本限制是互斥角色的限制，互斥角色是指各自
 ### 3、RBAC数据库设计
 
 ![RBAC数据库设计](https://img1.dotnet9.com/2021/02/0108.png)
+
+- 本文Markdown：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2021/02/2021-02-18_01.md)
+
+- 本文博文地址：[点击浏览](https://dotnet9.com/810)
