add post url link;

--- a/doc/blog_contents/uploads/2020/01/2020-01-07_01.md
+++ b/doc/blog_contents/uploads/2020/01/2020-01-07_01.md
@@ -1,4 +1,4 @@
->本文只是简单的登录界面布局，没有太重要的功能效果，首发于[Dotnet9](https://dotnet9.com/6845.html)。
+>本文只是简单的登录界面布局，没有太重要的功能效果。
 
 ## 1. 实现效果
 
@@ -94,3 +94,7 @@
 ## 5. 代码下载
 
 Github源码下载：[HelloDotNetCore](https://github.com/Abel13/dotnetcore_login/blob/master/HelloDotNetCore)
+
+本文Markdown地址：[点这](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2020/01/2020-01-07_01.md)
+
+本文博客地址：[点这](https://dotnet9.com/722)
