--- a/doc/blog_contents/uploads/2020/11/2020-11-27_01.md
+++ b/doc/blog_contents/uploads/2020/11/2020-11-27_01.md
@@ -116,3 +116,7 @@ private void Grid_Drop(object sender, DragEventArgs e)
 ## 三、本文Over
 
 功能很简单，不求精深，会用就行。
+
+本文Markdown地址：[点击浏览](https://github.com/dotnet9/dotnet9.com/blob/develop/doc/blog_contents/uploads/2020/11/2020-11-27_01.md)
+
+本文博文地址：[点击浏览](https://dotnet9.com/735)
