--- a/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/en-US.json
@@ -9,6 +9,16 @@
     "It plans to provide a series of free and open-source online tools for yourself and others.",
   "GetStarted": "Get Started",
   "GoToDotnet9Blog": "Go To Dotnet9 blog",
+  "IcoToolTitle": "Ico Converter",
+  "IcoToolDesc": "Jpg, PNG, BMP and other one click conversion ico",
+  "IcoToolUseMemo":
+    "Please select the image to be converted, such as PNG, JPG, JPEG, etc. the default converted image size includes: 16x16, 32x32, 48x48256x256",
+  "IcoToolMFileInputPlaceholder": "Please select a source picture",
+  "IcoToolMFileInputLabel": "Source picture",
+  "IcoToolMButtonLoaderContent": "Convert ICO...",
+  "IcoToolMButtonChildContent": "Convert and download now",
+  "IcoToolFileSizeLimitMessage": "Please select a picture smaller than 2MB",
+  "ToolsGo": "Go",
   "JoinUs": "Join us",
   "UpdateLog": "Update log",
   "CommonProblem": "Common problem"
