Extract multilingual keys;

--- a/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
+++ b/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
@@ -1,6 +1,6 @@
 **行文目录**
 
-- 1. 效果演示
+- 1. 功能效果演示
 - 2. 实现说明
   - 2.1 其他图片上传
   - 2.2 核心代码：其他图片转Ico
@@ -20,6 +20,14 @@
 【图片】
 
 ## 2. 实现说明
+
+通过该工具，能了解到：
+
+1. 使用Blazor怎么上传文件到服务器(Blazor Server)。
+2. 怎么从服务器下载文件。
+3. 如何将png等图片转换为Ico图片。
+
+下面对该工具的实现代码做个简单说明，不太清楚的可以留言交流。
 
 ### 2.1 其他图片上传
 
