--- a/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
+++ b/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
@@ -7,13 +7,9 @@
   - 2.3 转换后的Ico文件下载
 - 3. 总结
 
-## 1. 功能效果演示
+## 1. 效果演示
 
 仓库地址：[IcoTool](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
-
-有没有手拿`png`图片，但需要更新网站`favaicon.ico`时，到出找工具的时候？
-
-此工具提供诸如`png`、`jpg`、`bmp`等等图片文件转Ico的功能，免费、在线、无需登录使用，做这个工具方便自己也方便别人。
 
 演示下文件上传、转换结果：
 
@@ -34,44 +30,40 @@
 使用的[MASA Blazor](https://masa-blazor-docs-dev.lonsid.cn/)上传组件[MFileInput](https://masa-blazor-docs-dev.lonsid.cn/components/file-inputs)，看下面的代码，就一个上传组件加上传时文件保存操作，代码文件：[IcoTool.razor](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 
 ```html
-@*<MFileInput TValue="IBrowserFile"
-            Placeholder="@T("IcoToolMFileInputPlaceholder")"
+<MFileInput TValue="IBrowserFile"
+            Placeholder="请选择源图片"
             Rules="_rules"
             ShowSize
             OnChange="@LoadFile"
             Accept="image/png, image/jpeg, image/jpg, image/bmp"
-            Label="@T("IcoToolMFileInputLabel")">
-</MFileInput>*@
-
-<InputFile OnChange="@LoadFile"/>
+            Label="源图片">
+</MFileInput>
 
 @code {
-    private bool _loading;
-    private string _sourceFilePath = "";
-    private string _destFilePath = "";
-    private static string ImageDirName = "files";
+    private bool loading;
+    private string sourceFilePath = "";
+    private string destFilePath = "";
+    private readonly string imageDirName = "files";
 
     private readonly List<Func<IBrowserFile, StringBoolean>> _rules = new()
     {
-        value => value.Size < 2 * 1024 * 1024 ? true : "Please select a picture smaller than 2MB"
+        value => value.Size < 2 * 1024 * 1024 ? true : "请选择小于2MB的图片"
     };
 
     private async Task LoadFile(InputFileChangeEventArgs e)
     {
-        _destFilePath = string.Empty;
-        if (!string.IsNullOrWhiteSpace(_sourceFilePath) && File.Exists(_sourceFilePath))
+        destFilePath = string.Empty;
+        if (!string.IsNullOrWhiteSpace(sourceFilePath) && File.Exists(sourceFilePath))
         {
-            File.Delete(_sourceFilePath);
+            File.Delete(sourceFilePath);
         }
-
-        var saveImageDir = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "wwwroot", ImageDirName);
+        var saveImageDir = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "wwwroot", imageDirName);
         if (!Directory.Exists(saveImageDir))
         {
             Directory.CreateDirectory(saveImageDir);
         }
-
-        _sourceFilePath = Path.Combine(saveImageDir, DateTime.UtcNow.ToString("yyyyMMddHHmmssfff"));
-        await using var fs = new FileStream(_sourceFilePath, FileMode.Create);
+        sourceFilePath = Path.Combine(saveImageDir, DateTime.UtcNow.ToString("yyyyMMddHHmmssfff"));
+        await using var fs = new FileStream(sourceFilePath, FileMode.Create);
         await e.File.OpenReadStream().CopyToAsync(fs);
     }
 }
@@ -358,43 +350,42 @@ public class ImageHelperTests
 页面调用Ico转换功能代码如下，提供一个触发转换的按钮和执行转换的方法，代码文件：[IcoTool.razor](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 
 ```html
-@if (!string.IsNullOrWhiteSpace(_sourceFilePath) && File.Exists(_sourceFilePath))
+@if (!string.IsNullOrWhiteSpace(sourceFilePath) && File.Exists(sourceFilePath))
 {
     <MButton class="ma-2 white--text"
-             Loading="_loading"
-             Disabled="_loading"
+             Loading="loading"
+             Disabled="loading"
              Depressed Color="primary"
-             OnClick="@ConvertToIcon">
+             OnClick="ConvertToIcon">
         <LoaderContent>
-            <span>@T("IcoToolMButtonLoaderContent")</span>
+            <span>转换Ico中...</span>
         </LoaderContent>
         <ChildContent>
-            <span>@T("IcoToolMButtonChildContent")</span>
+            立即转换并下载
         </ChildContent>
     </MButton>
 }
 
 @code {
-    private async Task ConvertToIcon()
+    private void ConvertToIcon()
     {
-        if (!string.IsNullOrWhiteSpace(_destFilePath) && File.Exists(_destFilePath))
+        if (!string.IsNullOrWhiteSpace(destFilePath) && File.Exists(destFilePath))
         {
-            await DownloadIco();
+            DownloadIco();
             return;
         }
+        loading = true;
 
-        _loading = true;
-
-        if (!string.IsNullOrWhiteSpace(_sourceFilePath) && File.Exists(_sourceFilePath))
+        if (!string.IsNullOrWhiteSpace(sourceFilePath) && File.Exists(sourceFilePath))
         {
-            _destFilePath = $"{_sourceFilePath}.ico";
-            if (ImagingHelper.ConvertToIcon(_sourceFilePath, _destFilePath))
+            destFilePath = $"{sourceFilePath}.ico";
+            if (ImagingHelper.ConvertToIcon(sourceFilePath, destFilePath))
             {
-                await DownloadIco();
+                DownloadIco();
             }
         }
 
-        _loading = false;
+        loading = false;
     }
 }
 ```
@@ -438,11 +429,12 @@ public class ImageHelperTests
 </script>
 ```
 
-页面下载时使用以下代码，使用到`JS互操作`(什么是`JS互操作`？可以参考我转载的这篇文章了解：[Blazor Server(14/30)大家一起学Blazor：JavaScript interop(互操作)](https://dotnet9.com/1038))，代码放：[IcoTool.razor](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
+页面下载时使用以下代码，使用到`JS互操作`(什么是`JS互操作`？可以参考我转载的这篇文章了解[首页.NETBlazorBlazor Server
+(14/30)大家一起学Blazor：JavaScript interop(互操作)](https://dotnet9.com/1038))，代码放：[IcoTool.razor](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 
-```C#
+```html
 
-[Inject] public IJSRuntime Js { get; set; } = default!;
+@inject IJSRuntime JS
 
 // 省略n多代码
 
@@ -450,10 +442,10 @@ public class ImageHelperTests
 
     private async Task DownloadIco()
     {
-        await using var fileStream = new FileStream(_destFilePath, FileMode.Open);
+        using var fileStream = new FileStream(destFilePath, FileMode.Open);
         using var streamRef = new DotNetStreamReference(fileStream);
 
-        await Js.InvokeVoidAsync("downloadFileFromStream", Path.GetFileName(_destFilePath), streamRef);
+        await JS.InvokeVoidAsync("downloadFileFromStream", Path.GetFileName(destFilePath), streamRef);
     }
 }
 ```
