--- a/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
+++ b/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
@@ -7,13 +7,21 @@
   - 2.3 转换后的Ico文件下载
 - 3. 总结
 
-## 1. 效果演示
+## 1. 功能效果演示
 
 仓库地址：[IcoTool](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 
 演示下文件上传、转换结果：
 
-【图片】
+![](https://img1.dotnet9.com/2022/02/1301.gif)
+
+通过该工具及代码，能了解到：
+
+1. 使用Blazor怎么上传文件到服务器(Blazor Server)。
+2. 怎么从服务器下载文件。
+3. 如何将png等图片转换为Ico图片。
+
+下面对该工具的实现代码做个简单说明，不太清楚的可以留言交流。
 
 ## 2. 实现说明
 
@@ -31,40 +39,42 @@
 
 ```html
 <MFileInput TValue="IBrowserFile"
-            Placeholder="请选择源图片"
+            Placeholder="@T("IcoToolMFileInputPlaceholder")"
             Rules="_rules"
             ShowSize
             OnChange="@LoadFile"
             Accept="image/png, image/jpeg, image/jpg, image/bmp"
-            Label="源图片">
+            Label="@T("IcoToolMFileInputLabel")">
 </MFileInput>
 
 @code {
-    private bool loading;
-    private string sourceFilePath = "";
-    private string destFilePath = "";
-    private readonly string imageDirName = "files";
+    private bool _loading;
+    private string _sourceFilePath = "";
+    [Inject] public I18n I18N { get; set; } = default!;
+    [Inject] public IJSRuntime Js { get; set; } = default!;
 
-    private readonly List<Func<IBrowserFile, StringBoolean>> _rules = new()
+    protected override async Task OnInitializedAsync()
     {
-        value => value.Size < 2 * 1024 * 1024 ? true : "请选择小于2MB的图片"
-    };
+        _rules.Add(value => (value==null|| value.Size < 2 * 1024 * 1024 )? true : T("IcoToolFileSizeLimitMessage"));
+        await base.OnInitializedAsync();
+    }
 
-    private async Task LoadFile(InputFileChangeEventArgs e)
+    private async Task LoadFile(IBrowserFile? e)
     {
-        destFilePath = string.Empty;
-        if (!string.IsNullOrWhiteSpace(sourceFilePath) && File.Exists(sourceFilePath))
+        if (e == null)
         {
-            File.Delete(sourceFilePath);
+            _destFilePath = _sourceFilePath = string.Empty;
+            return;
         }
-        var saveImageDir = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "wwwroot", imageDirName);
-        if (!Directory.Exists(saveImageDir))
-        {
-            Directory.CreateDirectory(saveImageDir);
-        }
-        sourceFilePath = Path.Combine(saveImageDir, DateTime.UtcNow.ToString("yyyyMMddHHmmssfff"));
-        await using var fs = new FileStream(sourceFilePath, FileMode.Create);
-        await e.File.OpenReadStream().CopyToAsync(fs);
+        _destFilePath = string.Empty;
+        if (!string.IsNullOrWhiteSpace(_sourceFilePath) && File.Exists(_sourceFilePath)) File.Delete(_sourceFilePath);
+
+        var saveImageDir = Path.Combine(AppDomain.CurrentDomain.BaseDirectory, "wwwroot", ImageDirName);
+        if (!Directory.Exists(saveImageDir)) Directory.CreateDirectory(saveImageDir);
+
+        _sourceFilePath = Path.Combine(saveImageDir, DateTime.UtcNow.ToString("yyyyMMddHHmmssfff"));
+        await using var fs = new FileStream(_sourceFilePath, FileMode.Create);
+        await e.OpenReadStream().CopyToAsync(fs);
     }
 }
 ```
@@ -350,42 +360,40 @@ public class ImageHelperTests
 页面调用Ico转换功能代码如下，提供一个触发转换的按钮和执行转换的方法，代码文件：[IcoTool.razor](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 
 ```html
-@if (!string.IsNullOrWhiteSpace(sourceFilePath) && File.Exists(sourceFilePath))
+@if (!string.IsNullOrWhiteSpace(_sourceFilePath) && File.Exists(_sourceFilePath))
 {
     <MButton class="ma-2 white--text"
-             Loading="loading"
-             Disabled="loading"
+             Loading="_loading"
+             Disabled="_loading"
              Depressed Color="primary"
-             OnClick="ConvertToIcon">
+             OnClick="@ConvertToIcon">
         <LoaderContent>
-            <span>转换Ico中...</span>
+            <span>@T("IcoToolMButtonLoaderContent")</span>
         </LoaderContent>
         <ChildContent>
-            立即转换并下载
+            <span>@T("IcoToolMButtonChildContent")</span>
         </ChildContent>
     </MButton>
 }
 
 @code {
-    private void ConvertToIcon()
+    private async Task ConvertToIcon()
     {
-        if (!string.IsNullOrWhiteSpace(destFilePath) && File.Exists(destFilePath))
+        if (!string.IsNullOrWhiteSpace(_destFilePath) && File.Exists(_destFilePath))
         {
-            DownloadIco();
+            await DownloadIco();
             return;
         }
-        loading = true;
 
-        if (!string.IsNullOrWhiteSpace(sourceFilePath) && File.Exists(sourceFilePath))
+        _loading = true;
+
+        if (!string.IsNullOrWhiteSpace(_sourceFilePath) && File.Exists(_sourceFilePath))
         {
-            destFilePath = $"{sourceFilePath}.ico";
-            if (ImagingHelper.ConvertToIcon(sourceFilePath, destFilePath))
-            {
-                DownloadIco();
-            }
+            _destFilePath = $"{_sourceFilePath}.ico";
+            if (ImagingHelper.ConvertToIcon(_sourceFilePath, _destFilePath)) await DownloadIco();
         }
 
-        loading = false;
+        _loading = false;
     }
 }
 ```
@@ -442,10 +450,10 @@ public class ImageHelperTests
 
     private async Task DownloadIco()
     {
-        using var fileStream = new FileStream(destFilePath, FileMode.Open);
+        await using var fileStream = new FileStream(_destFilePath, FileMode.Open);
         using var streamRef = new DotNetStreamReference(fileStream);
 
-        await JS.InvokeVoidAsync("downloadFileFromStream", Path.GetFileName(destFilePath), streamRef);
+        await Js.InvokeVoidAsync("downloadFileFromStream", Path.GetFileName(_destFilePath), streamRef);
     }
 }
 ```
