--- a/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
+++ b/doc/blog_contents/uploads/2022/02/2022-02-22_02.md
@@ -11,6 +11,8 @@
 
 仓库地址：[IcoTool](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
 
+在线演示地址：[https://tool.dotnet9.com/ico](https://tool.dotnet9.com/ico)
+
 演示下文件上传、转换结果：
 
 ![](https://img1.dotnet9.com/2022/02/1301.gif)
@@ -465,3 +467,9 @@ public class ImageHelperTests
 3. 本工具使用[7.0.100-preview.1](https://dotnet.microsoft.com/en-us/download/dotnet/7.0)开发、编译、上线，使用[.NET 6](https://dotnet.microsoft.com/en-us/download/dotnet/6.0)的同学，请放心使用，可以无缝升级。
 
 `Dotnet9工具箱`会不断添加新的免费、开源、在线工具，欢迎star支持，有什么需求我会考虑加上，仓库地址：[Dotnet9.Tools](https://github.com/dotnet9/dotnet9.com)，可[提交issue](https://github.com/dotnet9/dotnet9.com/issues/new)、[网站留言](https://dotnet9.com)、微信公众号(dotnet9)联系等等。
+
+>本工具源码：[IcoTool](https://github.com/dotnet9/dotnet9.com/blob/develop/src/Dotnet9.Tools.Web/Pages/Public/ImageTools/IcoTool.razor)
+>
+>介绍文章：[Blazor在线Ico转换工具](https://dotnet9.com/?p=1715（在新窗口中打开）)
+>
+>在线演示地址：[https://tool.dotnet9.com/ico](https://tool.dotnet9.com/ico)
