Delete intermediate files to protect user privacy;

--- a/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
+++ b/src/Dotnet9.Tools.Web/wwwroot/locale/zh-CN.json
@@ -8,13 +8,13 @@
   "Dotnet9ToolsDescription": "计划提供一系列免费开源在线工具给自己用，也分享给别人用。",
   "GetStarted": "开始使用吧",
   "GoToDotnet9Blog": "浏览Dotnet9博客",
-  "IcoToolTitle": "Ico转换",
-  "IcoToolDesc": "jpg、png、bmp等一键转换ico",
-  "IcoToolUseMemo": "请选择需要转换的图片，比如：png，jpg,jpeg等，默认转换的图片大小包含：16x16,32x32,48x48,256x256",
+  "IcoToolTitle": "在线Icon图标转换",
+  "IcoToolDesc": "jpg、png、bmp等图片一键转换成ico图标",
+  "IcoToolUseMemo": "请选择需要转换的图片，比如：png、jpg、jpeg、tmp等，默认转换的图片尺寸包含：16x16+32x32+48x48+256x256，转换完成不会保存源文件和生成的Icon图标，请放心使用。",
   "IcoToolMFileInputPlaceholder": "请选择源图片",
   "IcoToolMFileInputLabel": "源图片",
   "IcoToolMButtonLoaderContent": "转换Ico中...",
-  "IcoToolMButtonChildContent": "立即转换并下载",
+  "IcoToolMButtonChildContent": "立即转换并下载Icon",
   "IcoToolFileSizeLimitMessage": "请选择小于2MB的图片",
   "ToolsGo": "进入",
   "JoinUs": "加入我们",
